fix(object-storage): switch kc

--- a/frontend/providers/objectstorage/public/locales/en/common.json
+++ b/frontend/providers/objectstorage/public/locales/en/common.json
@@ -14,5 +14,6 @@
   "totalSpace": "Total Space",
   "s3ServiceParams": "Access Key",
   "refresh": "Refresh",
+  "dailyEstimate": "Daily Estimate",
   "deleteWarning": "Delete Warning"
 }
